fix: Revert z-index of .contents

--- a/html/css/card.css
+++ b/html/css/card.css
@@ -106,7 +106,7 @@ body > .card > .contents{
   width: 10px;
   height: 10px;
   position: absolute;
-  z-index: 50;
+  z-index: 10;
 }
 
 body > .card > .contents > .contentsFrame{
